# silero-vad-c

./: .gitignore  CMakeLists.txt  README.md  building.md  download_releases.py  export_silero_vad_jit_weights.py  export_silero_vad_weights.py  package_release.py  run_silero_vad_clib.py  silero_vad.c  test_silero_vad_clib.py
cmake/toolchains/: linux-aarch64.cmake  linux-armv7.cmake
scripts/: build_linux.sh  build_macos.sh  build_release.py  build_windows.ps1
src/silero_vad/: __init__.py  utils_vad.py
